--- a/index.html
+++ b/index.html
@@ -9,67 +9,66 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <img src="./img/bikcraft.svg" alt="#">
-        <nav class="menu">
-            <ul class="menu-lista">
-                <li class="menu-item"><a href="#">sobre</a></li>
-                <li class="menu-item"><a href="#">produtos</a></li>
-                <li class="menu-item"><a href="#">lojas</a></li>
-                <li class="menu-item"><a href="#">contato</a></li>
+        <nav class="nav-principal">
+            <ul class="nav-lista">
+                <a href="#">sobre</a>
+                <a href="#">produtos</a>
+                <a href="#">lojas</a>
+                <a href="#">contato</a>
             </ul>
         </nav>
     </header>
 
-    <main class="principal">
-        <section class="introducao">
-            <div class="introducao-conteudo">
-                <h1 class="titulo">Bicicletas Feitas a Mão</h1>
+    <main>
+        <section class="principal">
+            <div class="principal-conteudo">
+                <h1>Bicicletas Feitas a Mão</h1>
                 <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
-                <button class="btn"><a href="#">ver mais</a></button>
+                <button class="principal-btn">ver mais</button>
             </div>
 
-            <div class="container-img">
-                <img src="./img/bicicleta.jpg" alt="Bicicleta Preta" title="Bicicleta Bikcraft">
+            <div class="principal-img">
+                <img src="./img/bicicleta.jpg" alt="bicicleta preta">
             </div>
         </section>
 
-        <section class="vantagens">
-
+        <section class="principal-vantagens media-one-collumn">
             <div class="vantagens-titulo">
-                <h3>VANTAGENS BIKCRAFT</h3>
+                <h2>vantagens BIKCRAFT</h2>
             </div>
+            <div>
+                <ul class="vantagens-conteudo">
+                    <li class="vantagens-lista">
+                        <img src="./img/eletrica.svg" alt="#">
+                        <div>
+                            <h3>Motor Elétrico</h3>
+                            <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+                        </div>
+                    </li>
 
-            <ul class="vantagens-conteudo">
-                <li>
-                    <img src="./img/eletrica.svg" alt="#">
-                    <div>
-                        <h3>Motor Elétrico</h3>
-                        <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-                    </div>
-                </li>
-                <li>
-                    <img src="./img/velocidade.svg" alt="#">
-                    <div>
-                        <h3>40 km/h</h3>
-                        <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-                    </div>
-                </li>
-                <li>
-                    <img src="./img/rastreador.svg" alt="#">
-                    <div>
-                        <h3>Rastreador</h3>
-                        <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-                    </div>
-                </li>
-            </ul>
+                    <li class="vantagens-lista">
+                        <div><img src="./img/velocidade.svg" alt="#"></div>
+                        <div>
+                            <h3>40 km/h</h3>
+                            <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+                        </div>
+                    </li>
+
+                    <li class="vantagens-lista">
+                        <img src="./img/rastreador.svg" alt="#">
+                        <div>
+                            <h3>Rastreador</h3>
+                            <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
-
-    <footer class="footer">
-        <div>
-            <p>Bikcraft. Alguns Direitos Reservados.</p>
-        </div>
+    <footer class="rodape">
+        <p>Bikcraft. Alguns Direitos Reservados.</p>
     </footer>
 </body>
 
